[gd_scene load_steps=19 format=3 uid="uid://dd204kqh5fn5k"]

[ext_resource type="Script" path="res://Character/coal.gd" id="1_01xcm"]
[ext_resource type="Texture2D" uid="uid://dhnerwrvgnqkk" path="res://Sprites/coal.png" id="1_ukb1b"]
[ext_resource type="Texture2D" uid="uid://dwlhiruj57c70" path="res://Sprites/burnradius.png" id="2_brywt"]
[ext_resource type="Texture2D" uid="uid://bon1fsg1rxmqn" path="res://Sprites/embers.png" id="3_k41cd"]
[ext_resource type="AudioStream" uid="uid://b2l4blqyc7t37" path="res://Audio/SFX/coal_pickup.wav" id="5_h2a6i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c44m0"]
radius = 30.5041

[sub_resource type="Animation" id="Animation_gmj2t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteComponent:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ukb1b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteComponent:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteComponent:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h2yme"]
resource_name = "coal"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteComponent:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ukb1b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteComponent:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteComponent:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7jjn"]
_data = {
"RESET": SubResource("Animation_gmj2t"),
"coal": SubResource("Animation_h2yme")
}

[sub_resource type="Animation" id="Animation_u04wn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BurnSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.745098)]
}

[sub_resource type="Animation" id="Animation_hek6e"]
resource_name = "burnradius"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BurnSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.745098), Color(1, 1, 1, 0.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02j2r"]
_data = {
"RESET": SubResource("Animation_u04wn"),
"burnradius": SubResource("Animation_hek6e")
}

[sub_resource type="Curve" id="Curve_2bfmt"]
_data = [Vector2(0, 1), 0.0, 3.13972, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_75qhk"]
curve = SubResource("Curve_2bfmt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lj4y8"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 30.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
gravity = Vector3(0, -7, 0)
linear_accel_max = 20.0
scale_min = 0.3
scale_max = 0.5
scale_curve = SubResource("CurveTexture_75qhk")
turbulence_noise_speed_random = 4.0

[sub_resource type="Curve" id="Curve_y735t"]
_data = [Vector2(0.766667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_al7yp"]
curve = SubResource("Curve_y735t")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tj8dt"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 200.0
initial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)
scale_min = 0.8
scale_curve = SubResource("CurveTexture_al7yp")
turbulence_enabled = true

[node name="Coal" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 16
collision_mask = 0
script = ExtResource("1_01xcm")

[node name="BurnSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_brywt")

[node name="SpriteComponent" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_ukb1b")
hframes = 7

[node name="CollisionComponent" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c44m0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7jjn")
}

[node name="GlowAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_02j2r")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -7)
process_material = SubResource("ParticleProcessMaterial_lj4y8")
texture = ExtResource("3_k41cd")
speed_scale = 0.7
explosiveness = 0.2

[node name="DestroyParticles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_tj8dt")
texture = ExtResource("3_k41cd")
one_shot = true
explosiveness = 1.0

[node name="CoalPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h2a6i")
volume_db = -11.0
bus = &"SFX"
